--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -43,12 +43,14 @@ body {
         align-items: center;
         text-align: center;
         flex-direction: column;
+
+        h1 {
+            text-align: center;
+        }
     }
 
     .swiper-pagination {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
+        opacity: 0;
     }
 
 }
