--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -39,6 +39,10 @@ body {
     align-items: center;
     height: 100%;
 
+    h1 {
+        letter-spacing: .1em;
+    }
+
     .moon-wrapper {
         margin-right: 2%;
         width: 30%;
