--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -8,6 +8,5 @@ h1, h2, h3 {
 h1 {
     font-size: clamp(2em, 2vw, 2em);
     line-height: 1em;
-    letter-spacing: .2em;
     text-transform: uppercase;
 }
